arial plus hide submenu

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -20,6 +20,11 @@ msgctxt "#31001"
 msgid "Revenue"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31002"
+msgid "Display submenu categories widget"
+msgstr ""
+
 #: /1080i/Includes_Furniture.xml
 msgctxt "#31003"
 msgid "Current conditions"
