progress plus busy loader

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -85,6 +85,11 @@ msgctxt "#31014"
 msgid "Extra fanart"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31015"
+msgid "Minimal busy loader"
+msgstr ""
+
 #: /shortcuts/overrides.xml
 msgctxt "#31017"
 msgid "Smart Shortcuts"
