add from studio movies in info dialog

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -90,6 +90,11 @@ msgctxt "#31015"
 msgid "Minimal busy loader"
 msgstr ""
 
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31016"
+msgid "By"
+msgstr ""
+
 #: /shortcuts/overrides.xml
 msgctxt "#31017"
 msgid "Smart Shortcuts"
@@ -128,6 +133,11 @@ msgstr ""
 #: /1080i/SkinSettings.xml
 msgctxt "#31024"
 msgid "Miscellaneous"
+msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31025"
+msgid "From"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
