--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -22,7 +22,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31002"
-msgid "Display submenu categories widget"
+msgid "Categories widget"
 msgstr ""
 
 #: /1080i/Includes_Furniture.xml
@@ -122,7 +122,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31022"
-msgid "Use animated artwork where available"
+msgid "Animated artwork"
 msgstr ""
 
 #: /1080i/Includes_Statusbar.xml
@@ -138,6 +138,11 @@ msgstr ""
 #: /1080i/DialogVideoInfo.xml
 msgctxt "#31025"
 msgid "From"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31026"
+msgid "Alphabet strip"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -237,7 +242,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31056"
-msgid "Use genre colors in PVR guide"
+msgid "Genre colors in PVR guide"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -530,11 +535,11 @@ msgid "3D Mode"
 msgstr ""
 
 msgctxt "#31118"
-msgid "Display artist slideshow"
+msgid "Artist slideshow"
 msgstr ""
 
 msgctxt "#31119"
-msgid "Display visualisation behind slideshow"
+msgid "Visualisation behind slideshow"
 msgstr ""
 
 msgctxt "#31120"
@@ -542,7 +547,7 @@ msgid "Animate artist slideshow"
 msgstr ""
 
 msgctxt "#31121"
-msgid "Display fanart"
+msgid "Fanart"
 msgstr ""
 
 msgctxt "#31122"
@@ -829,7 +834,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31192"
-msgid "Use focus bounce animation"
+msgid "Focus bounce animation"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -1029,7 +1034,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31250"
-msgid "Select secondary gradient colour"
+msgid "Gradient colour"
 msgstr ""
 
 msgctxt "#31251"
@@ -1062,7 +1067,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31258"
-msgid "Display clearart with seekbar"
+msgid "Clearart with seekbar"
 msgstr ""
 
 msgctxt "#31259"
@@ -1119,7 +1124,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31273"
-msgid "Select background overlay color"
+msgid "Background overlay color"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -1159,7 +1164,7 @@ msgid "Extended info"
 msgstr ""
 
 msgctxt "#31286"
-msgid "Select highlight colour"
+msgid "Highlight colour"
 msgstr ""
 
 msgctxt "#31287"
@@ -1181,7 +1186,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31291"
-msgid "Display text labels on landscape widgets"
+msgid "Landscape widget text"
 msgstr ""
 
 #: /1080i/DialogBusy.xml
@@ -1331,12 +1336,12 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31336"
-msgid "Display background color overlay"
+msgid "Background overlay"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31338"
-msgid "Display background vignette effect"
+msgid "Background vignette"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -1451,7 +1456,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31364"
-msgid "Mouse and touch compatible widgets"
+msgid "Mouse compatability"
 msgstr ""
 
 #: /1080i/script-script.extendedinfo-DialogVideoInfo.xml
