fixes for home focus

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B]0.9.2[/B]
+Fix focus on re-entering home screen
+Fix (hopefully) widget loading
+
 [B]0.9.1[/B]
 Add option to hide submenu
 Add Arial font
