--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 [B]0.9.3[/B]
 Update widget code to use skinshortcut templates
 Update Nextaired
+Update NextUp postplay screen.
 
 [B]0.9.2[/B]
 Fix focus on re-entering home screen
