--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -175,6 +175,11 @@ msgctxt "#31032"
 msgid "Restore skin settings"
 msgstr ""
 
+#: /1080i/Includes_Items.xml
+msgctxt "#31033"
+msgid "Audio Settings"
+msgstr ""
+
 #: /1080i/SkinSettings.xml
 msgctxt "#31034"
 msgid "Change backup and restore path"
