back button mouse

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ New osd design
 Fix processinfo dialog
 Fix clearart on seekbar
 Remove unused skin settings
+Add back button for mouse compatability mode
 
 [B]0.9.3[/B]
 Update widget code to use skinshortcut templates
