--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -195,6 +195,11 @@ msgctxt "#31036"
 msgid "hr"
 msgstr ""
 
+#: /1080i/DialogSubtitles.xml
+msgctxt "#31037"
+msgid "Download Subtitles"
+msgstr ""
+
 #: /1080i/Includes_View.xml
 msgctxt "#31038"
 msgid "Landscape"
