remove blur label warning

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1144,7 +1144,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31275"
-msgid "Blur fanart (WARNING: CPU intensive. Please disable if having performance issues.)"
+msgid "Blur fanart"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
