--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+[B]0.9.6[/B]
+Many optimisations of skin code
+Viewmode disabler
+Add option to disable text in wall views
+
 [B]0.9.5[/B]
 Close osd after subs download.
 On subs button, download if no subs to switch on.
