--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -205,9 +205,24 @@ msgctxt "#31038"
 msgid "Landscape"
 msgstr ""
 
+#: /1080i/Custom_1117_EnableViews.xml
+msgctxt "#31039"
+msgid "Enable / disable viewmodes"
+msgstr ""
+
+#: /1080i/Custom_1117_EnableViews.xml
+msgctxt "#31040"
+msgid "Poster Showcase"
+msgstr ""
+
 #: /1080i/Includes_Labels.xml
 msgctxt "#31041"
 msgid "Customise your home menu items, widgets, and backgrounds."
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31042"
+msgid "Text labels in wall viewmodes"
 msgstr ""
 
 #: /1080i/Includes_Labels.xml
