--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Many optimisations of skin code
 Viewmode disabler
 Add option to disable text in wall views
 Fix flickering widget bug
+Show fanart press up from viewmode menu
 
 [B]0.9.5[/B]
 Close osd after subs download.
