--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -866,6 +866,26 @@ msgctxt "#31181"
 msgid "Select icon"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31182"
+msgid "Additional Widgets"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31183"
+msgid "Default Widgets"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31184"
+msgid "Recently played movies"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31185"
+msgid "Recently Added Movies"
+msgstr ""
+
 #: /1080i/SkinSettings.xml
 msgctxt "#31186"
 msgid "Display osd submenu"
@@ -883,6 +903,11 @@ msgctxt "#31189"
 msgid "Recommended Albums"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31190"
+msgid "Recently Played Movies"
+msgstr ""
+
 msgctxt "#31191"
 msgid "Directed by"
 msgstr ""
@@ -897,13 +922,28 @@ msgctxt "#31193"
 msgid "Reset colors to default"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31194"
+msgid "Recently Played TvShows"
+msgstr ""
+
 msgctxt "#31195"
 msgid "Reload Skin"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31196"
+msgid "In Progress TvShows"
 msgstr ""
 
 #: /1080i/script-skinshortcuts.xml
 msgctxt "#31197"
 msgid "Save Changes"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31198"
+msgid "Recently Played Episodes"
 msgstr ""
 
 msgctxt "#31199"
@@ -918,6 +958,11 @@ msgstr ""
 #: /1080i/SkinSettings.xml
 msgctxt "#31201"
 msgid "Pressing info only displays seekbar (hides poster and plot)"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31202"
+msgid "Random Episodes"
 msgstr ""
 
 msgctxt "#31203"
@@ -964,13 +1009,28 @@ msgctxt "#31213"
 msgid "Today"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31214"
+msgid "Recently Added Episodes"
+msgstr ""
+
 msgctxt "#31215"
 msgid "Unwatched"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31216"
+msgid "In Progress Movies"
 msgstr ""
 
 #: /1080i/Includes_Home.xml
 msgctxt "#31217"
 msgid "Change location"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31218"
+msgid "In Progress Episodes"
 msgstr ""
 
 #: /1080i/script-nextup-notification-PostPlayInfo.xml
@@ -985,6 +1045,11 @@ msgstr ""
 #: /1080i/script-nextup-notification-PostPlayInfo.xml
 msgctxt "#31221"
 msgid "Next Up"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31222"
+msgid "Top Rated TvShows"
 msgstr ""
 
 msgctxt "#31223"
@@ -1015,6 +1080,11 @@ msgctxt "#31229"
 msgid "TV Shows Airing Today"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31230"
+msgid "Top Rated Episodes"
+msgstr ""
+
 #: /1080i/Includes_View_Posters.xml
 msgctxt "#31231"
 msgid "Lovefilm"
@@ -1022,6 +1092,11 @@ msgstr ""
 
 msgctxt "#31232"
 msgid "Reset path"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31233"
+msgid "Random TvShows"
 msgstr ""
 
 #: /1080i/SettingsProfile.xml
@@ -1043,6 +1118,11 @@ msgctxt "#31237"
 msgid "Sort"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31238"
+msgid "Recently Added Albums"
+msgstr ""
+
 #: /1080i/script-skinshortcuts.xml
 msgctxt "#31239"
 msgid "Direction"
@@ -1055,6 +1135,16 @@ msgstr ""
 
 msgctxt "#31241"
 msgid "Additional info"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31242"
+msgid "Recently Played Albums"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31243"
+msgid "Top 100 Albums"
 msgstr ""
 
 #: /1080i/script-skinshortcuts.xml
@@ -1120,6 +1210,11 @@ msgctxt "#31256"
 msgid "Display artwork"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31257"
+msgid "Movie Genres"
+msgstr ""
+
 #: /1080i/SkinSettings.xml
 msgctxt "#31258"
 msgid "Clearart with seekbar"
@@ -1127,6 +1222,11 @@ msgstr ""
 
 msgctxt "#31259"
 msgid "Extra fanart"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31260"
+msgid "Movie Sets"
 msgstr ""
 
 msgctxt "#31261"
@@ -1182,14 +1282,29 @@ msgctxt "#31273"
 msgid "Background overlay color"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31274"
+msgid "TvShow Genres"
+msgstr ""
+
 #: /1080i/SkinSettings.xml
 msgctxt "#31275"
 msgid "Blur fanart"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31276"
+msgid "IMDB Top 250 Movies"
+msgstr ""
+
 #: /1080i/SkinSettings.xml
 msgctxt "#31277"
 msgid "Animations"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31278"
+msgid "Unwatched Movies"
 msgstr ""
 
 msgctxt "#31279"
@@ -1206,6 +1321,11 @@ msgstr ""
 
 msgctxt "#31282"
 msgid "on"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31283"
+msgid "Unwatched Episodes"
 msgstr ""
 
 #: MPAA Rating
@@ -1247,6 +1367,11 @@ msgstr ""
 #: /1080i/DialogBusy.xml
 msgctxt "#31292"
 msgid "Kodi is busy$COMMA one moment please"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31293"
+msgid "Skin Helper Widgets"
 msgstr ""
 
 #: /1080i/Includes_Home.xml
