--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1379,6 +1379,11 @@ msgctxt "#31294"
 msgid "PVR / Live TV"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31295"
+msgid "Random Artists"
+msgstr ""
+
 #: /1080i/Includes_View_List.xml
 msgctxt "#31298"
 msgid "Media Info"
