Add nodes to default widgets

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1384,6 +1384,16 @@ msgctxt "#31295"
 msgid "Random Artists"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31296"
+msgid "Movie Nodes"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31297"
+msgid "TvShow Nodes"
+msgstr ""
+
 #: /1080i/Includes_View_List.xml
 msgctxt "#31298"
 msgid "Media Info"
@@ -1392,6 +1402,11 @@ msgstr ""
 #: /1080i/DialogVideoInfo.xml
 msgctxt "#31299"
 msgid "Premiered"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31300"
+msgid "Music Nodes"
 msgstr ""
 
 #: /1080i/DialogAddonInfo.xml
