default sources widget

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1409,9 +1409,24 @@ msgctxt "#31300"
 msgid "Music Nodes"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31301"
+msgid "TvShows"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31302"
+msgid "Music Sources"
+msgstr ""
+
 #: /1080i/DialogAddonInfo.xml
 msgctxt "#31303"
 msgid "Latest Changes"
+msgstr ""
+
+#: /shortcuts/overrides.xml
+msgctxt "#31304"
+msgid "Picture Sources"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
