--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]0.9.8[/B]
+Fix NextUp in info bug
+
 [B]0.9.7[/B]
 Fix resolution flags not showing
 Fix some alignment issues in dialogvideoinfo
