--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1434,6 +1434,11 @@ msgctxt "#31305"
 msgid "Color cycling"
 msgstr ""
 
+#: /1080i/Includes_Items.xml
+msgctxt "#31306"
+msgid "Special Features"
+msgstr ""
+
 #: /1080i/SkinSettings.xml
 msgctxt "#31309"
 msgid "Blur effect type"
