--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 [B]0.9.10[/B]
 Hopeful fix for widgets bug
 Characterart plus Awards on info
+Add slideshow ability in videoinfo
 
 [B]0.9.9[/B]
 Add FPS icon and indicator on videoosd info
