--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1440,6 +1440,11 @@ msgid "Special Features"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
+msgctxt "#31307"
+msgid "Prefer plot outline where available"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
 msgctxt "#31309"
 msgid "Blur effect type"
 msgstr ""
