--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1444,6 +1444,11 @@ msgctxt "#31307"
 msgid "Prefer plot outline where available"
 msgstr ""
 
+#: /1080i/Includes_Labels.xml
+msgctxt "#31308"
+msgid "Player"
+msgstr ""
+
 #: /1080i/SkinSettings.xml
 msgctxt "#31309"
 msgid "Blur effect type"
