--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 [B]0.9.11[/B]
 Add support for AEL metadata
 Show seekjump position
+Hide content for plotoverlay
 
 [B]0.9.10[/B]
 Hopeful fix for widgets bug
