--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1465,6 +1465,11 @@ msgid "Rate Song"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
+msgctxt "#31312"
+msgid "Enable / disable ratings"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
 msgctxt "#31313"
 msgid "Background transparency"
 msgstr ""
