--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1489,6 +1489,16 @@ msgctxt "#31316"
 msgid "Increased"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31317"
+msgid "Watched indicators"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31318"
+msgid "Shadows"
+msgstr ""
+
 #: /1080i/script-skinshortcuts.xml
 msgctxt "#31320"
 msgid "Important"
