--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Add support for AEL metadata
 Show seekjump position
 Hide content for plotoverlay
 Skin Settings > Miscellaneous > Enable / disable ratings
+Switch indicators to white for focused
 
 [B]0.9.10[/B]
 Hopeful fix for widgets bug
