--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
-[B]1.0.0[/B]
-Leia - fix scrollbars
+[B]0.9.12[/B]
+Fix for scrollbars in Leia
+LEIA - DialogAddonSettings
+LEIA - Change fanart to Leia version
 
 [B]0.9.11[/B]
 Add support for AEL metadata
