--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 [B]0.9.12[/B]
-Fix for scrollbars in Leia
+LEIA - Fix for scrollbars
 LEIA - DialogAddonSettings
 LEIA - Change fanart to Leia version
+Watched Indicators update
 
 [B]0.9.11[/B]
 Add support for AEL metadata
