--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -222,7 +222,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31042"
-msgid "Text labels in wall viewmodes"
+msgid "Wall view text labels"
 msgstr ""
 
 #: /1080i/DialogVideoInfo.xml
@@ -1202,7 +1202,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31255"
-msgid "Use generated landscape art"
+msgid "Generate landscape art"
 msgstr ""
 
 #: /1080i/Includes_Labels.xml
@@ -1441,7 +1441,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31307"
-msgid "Prefer plot outline where available"
+msgid "Prefer plot outline"
 msgstr ""
 
 #: /1080i/Includes_Labels.xml
@@ -1497,6 +1497,11 @@ msgstr ""
 #: /1080i/SkinSettings.xml
 msgctxt "#31318"
 msgid "Shadows"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31319"
+msgid "Indicator style"
 msgstr ""
 
 #: /1080i/script-skinshortcuts.xml
@@ -1584,6 +1589,11 @@ msgctxt "#31336"
 msgid "Background overlay"
 msgstr ""
 
+#: /1080i/Includes_Labels.xml
+msgctxt "#31337"
+msgid "Light"
+msgstr ""
+
 #: /1080i/SkinSettings.xml
 msgctxt "#31338"
 msgid "Background vignette"
@@ -1597,6 +1607,11 @@ msgstr ""
 #: /1080i/Includes_Labels.xml
 msgctxt "#31340"
 msgid "Match poster"
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31341"
+msgid "Dark"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -1617,6 +1632,16 @@ msgstr ""
 #: /1080i/Includes_Widgets.xml
 msgctxt "#31345"
 msgid "Event logging"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31346"
+msgid "Video OSD"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31347"
+msgid "Music OSD"
 msgstr ""
 
 #: /1080i/Home.xml
