--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1616,7 +1616,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31342"
-msgid "Widget item limit (use smaller values for better performance)"
+msgid "Widget item limit"
 msgstr ""
 
 #: /1080i/Settings.xml
