--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1734,6 +1734,11 @@ msgctxt "#31365"
 msgid "Images"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31366"
+msgid "Artwork button downloads all artwork"
+msgstr ""
+
 #: /1080i/script-script.extendedinfo-DialogInfo.xml
 msgctxt "#31368"
 msgid "Tagged Images"
