rottentomatoes icon 2018 style

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 [B]0.9.13[/B]
 Fixes for plot overlay in extended info actor
+Update rottentomatoes to fit new RT brand identity
+Touchup tmdb icon
 
 [B]0.9.12[/B]
 LEIA - Fix for scrollbars
