--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1739,6 +1739,11 @@ msgctxt "#31366"
 msgid "Artwork button downloads all artwork"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31367"
+msgid "Recently Added TvShows"
+msgstr ""
+
 #: /1080i/script-script.extendedinfo-DialogInfo.xml
 msgctxt "#31368"
 msgid "Tagged Images"
