--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1749,6 +1749,11 @@ msgctxt "#31368"
 msgid "Tagged Images"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31369"
+msgid "Prefer fanart for landscape widgets"
+msgstr ""
+
 #: /1080i/Includes_View_Posters.xml
 msgctxt "#31370"
 msgid "Banner Wall"
