--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@ Touchup tmdb icon
 Add studio logo to videoinfo
 Fix for images/extras showing in plugins
 Prefer fanart for landscape widgets toggle
+Fix for title length
 
 [B]0.9.12[/B]
 LEIA - Fix for scrollbars
