no scroll on one page

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 [B]0.9.14[/B]
 Fix bug in postplay nextup showing same thumb
 Add play icon to videoinfo extras
+No scroll on one page
 
 [B]0.9.13[/B]
 Fixes for plot overlay in extended info actor
