add extrathumbs to images

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 [B]0.9.14[/B]
+LEIA - add extrathumbs to images in info dialog
 Fix bug in postplay nextup showing same thumb
 Add play icon to videoinfo extras
 No scroll on one page
