--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1758,3 +1758,8 @@ msgstr ""
 msgctxt "#31370"
 msgid "Banner Wall"
 msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31371"
+msgid "Categories widget text"
+msgstr ""
