submenu big fix plus new sets icon from braz

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Add widget categories text option (wider categories widget)
 Change premiered to year for movies
 Rearrange info line so duration is next to end time
+Add new sets icon (thanks braz!)
 
 [B]0.9.14[/B]
 LEIA - add extrathumbs to images in info dialog
