some more fixes

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1763,3 +1763,8 @@ msgstr ""
 msgctxt "#31371"
 msgid "Categories widget text"
 msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31372"
+msgid "Force default menu position"
+msgstr ""
