skin global search

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 [B]0.9.15[/B]
+LEIA - Global Search 8 now skinned
 Add widget categories text option (wider categories widget)
 Change premiered to year for movies
 Rearrange info line so duration is next to end time
