see more widget item

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1768,3 +1768,13 @@ msgstr ""
 msgctxt "#31372"
 msgid "Force default menu position"
 msgstr ""
+
+#: /1080i/Includes_Widgets.xml
+msgctxt "#31373"
+msgid "See More"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31374"
+msgid "Display \"See more\" widget item"
+msgstr ""
