fix widget gap bug

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 [B]0.9.16[/B]
 LEIA - add "see more" widget item
 Change seekbar seeking to a white nib
+Fix widget gap bug
 
 [B]0.9.15[/B]
 LEIA - Global Search 8 now skinned
