--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,8 @@
 LEIA - add "see more" widget item
 Change seekbar seeking to a white nib
 Fix widget gap bug
+Gradient option
+Light Opaque colour scheme
 
 [B]0.9.15[/B]
 LEIA - Global Search 8 now skinned
