--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1777,4 +1777,8 @@ msgstr ""
 #: /1080i/SkinSettings.xml
 msgctxt "#31374"
 msgid "Display \"See more\" widget item"
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31375"
+msgid "Gradients on backing panels"
 msgstr ""
