fix for event log

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 [B]0.9.16[/B]
 LEIA - add "see more" widget item
 LEIA - fix globalsearch backing panels
+LEIA - fix for event log
 Change seekbar seeking to a white nib
 Fix widget gap bug
 Gradient option
