--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -924,7 +924,7 @@ msgstr ""
 
 #: /shortcuts/overrides.xml
 msgctxt "#31194"
-msgid "Recently Played TvShows"
+msgid "Recently Played TV Shows"
 msgstr ""
 
 msgctxt "#31195"
@@ -933,7 +933,7 @@ msgstr ""
 
 #: /shortcuts/overrides.xml
 msgctxt "#31196"
-msgid "In Progress TvShows"
+msgid "In Progress TV Shows"
 msgstr ""
 
 #: /1080i/script-skinshortcuts.xml
@@ -1049,7 +1049,7 @@ msgstr ""
 
 #: /shortcuts/overrides.xml
 msgctxt "#31222"
-msgid "Top Rated TvShows"
+msgid "Top Rated TV Shows"
 msgstr ""
 
 msgctxt "#31223"
@@ -1096,7 +1096,7 @@ msgstr ""
 
 #: /shortcuts/overrides.xml
 msgctxt "#31233"
-msgid "Random TvShows"
+msgid "Random TV Shows"
 msgstr ""
 
 #: /1080i/SettingsProfile.xml
@@ -1411,7 +1411,7 @@ msgstr ""
 
 #: /shortcuts/overrides.xml
 msgctxt "#31301"
-msgid "TvShows"
+msgid "TV Shows"
 msgstr ""
 
 #: /shortcuts/overrides.xml
@@ -1741,7 +1741,7 @@ msgstr ""
 
 #: /shortcuts/overrides.xml
 msgctxt "#31367"
-msgid "Recently Added TvShows"
+msgid "Recently Added TV Shows"
 msgstr ""
 
 #: /1080i/script-script.extendedinfo-DialogInfo.xml
