--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1783,3 +1783,8 @@ msgstr ""
 msgctxt "#31375"
 msgid "Gradients on backing panels"
 msgstr ""
+
+#: /1080i/SkinSettings.xml /1080i/SkinSettings.xml
+msgctxt "#31376"
+msgid "Display \"See more\" widget item"
+msgstr ""
