user rating star
user rating star

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]0.9.17[/B]
+Change user rating to star icon
+
 [B]0.9.16[/B]
 LEIA - add "see more" widget item
 LEIA - fix globalsearch backing panels
