--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -447,12 +447,12 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31087"
-msgid "Use colour overlay effect"
+msgid "Colour overlay effect"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31088"
-msgid "Use scrolling text effect"
+msgid "Scrolling text effect"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -636,7 +636,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31130"
-msgid "Display media flags with video info"
+msgid "Media flags"
 msgstr ""
 
 #: /1080i/MusicOSD.xml
@@ -1787,4 +1787,9 @@ msgstr ""
 #: /1080i/SkinSettings.xml /1080i/SkinSettings.xml
 msgctxt "#31376"
 msgid "Display \"See more\" widget item"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31377"
+msgid "Video lyrics"
 msgstr ""
