--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1793,3 +1793,8 @@ msgstr ""
 msgctxt "#31377"
 msgid "Video lyrics"
 msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31378"
+msgid "Genre names in PVR guide"
+msgstr ""
