--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Change user rating to star icon
 Add option to disable videolyrics Skin Settings > Video / Music OSD > Video Lyrics
 Fix pvr timer and record icons
 Add option to disable genre names
+Fix some music info spacing
 
 [B]0.9.16[/B]
 LEIA - add "see more" widget item
