--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1798,3 +1798,13 @@ msgstr ""
 msgctxt "#31378"
 msgid "Genre names in PVR guide"
 msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31379"
+msgid "Display plot overlay after delay"
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31380"
+msgid "Untitled"
+msgstr ""
