fix for shadowspot and pvr endtime

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@ LEIA - Fix some PVR recording and some infolabels
 Plot overlay delay option
 Add PVR default widget options
 Add PVR landscape text to check for channelname
+Fix for pvr end time
+Fix for shadowspot on volumebar
 
 [B]0.9.17[/B]
 Change user rating to star icon
