episode list view

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@ Add PVR default widget options
 Add PVR landscape text to check for channelname
 Fix for pvr end time
 Fix for shadowspot on volumebar
+Add Episode List view
 
 [B]0.9.17[/B]
 Change user rating to star icon
