--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1828,3 +1828,8 @@ msgstr ""
 msgctxt "#31384"
 msgid "Grouped Deleted Recordings"
 msgstr ""
+
+#: /1080i/Includes_View_Posters.xml
+msgctxt "#31385"
+msgid "Episode List"
+msgstr ""
