add option for autoclose osd

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ Add PVR landscape text to check for channelname
 Fix for pvr end time
 Fix for shadowspot on volumebar
 Add Episode List view
+Autoclose OSD option
 
 [B]0.9.17[/B]
 Change user rating to star icon
