--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1833,3 +1833,8 @@ msgstr ""
 msgctxt "#31385"
 msgid "Episode List"
 msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31386"
+msgid "Auto close OSD controls after delay (in seconds)"
+msgstr ""
