fix settings widget text
fix settings widget text

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]0.9.19[/B]
+Fix settings widget focus text
+
 [B]0.9.18[/B]
 LEIA - Fix some PVR recording and some infolabels
 Plot overlay delay option
