add artwork beef artwork helper for extrafanart

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 [B]0.9.19[/B]
 LEIA - Add artwork beef artwork helper support in videoinfodialog
+LEIA - Add support for artwork beef artwork helper for extrafanart
 Fix settings widget focus text
 
 [B]0.9.18[/B]
