startup splash option

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1838,3 +1838,8 @@ msgstr ""
 msgctxt "#31386"
 msgid "Auto close OSD controls after delay (in seconds)"
 msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31387"
+msgid "Splash screen image"
+msgstr ""
