--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 [B]0.9.20[/B]
-Fix for artwork helper on home screen
+LEIA - Fix for artwork helper on home screen
 
 [B]0.9.19[/B]
 LEIA - Add artwork beef artwork helper support in videoinfodialog
