--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 [B]0.9.20[/B]
 LEIA - Fix for artwork helper on home screen
+Fix screen calibration bug
 
 [B]0.9.19[/B]
 LEIA - Add artwork beef artwork helper support in videoinfodialog
