add extra art download icon

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1843,3 +1843,13 @@ msgstr ""
 msgctxt "#31387"
 msgid "Splash screen image"
 msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31388"
+msgid "Download All Artwork"
+msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31389"
+msgid "Select Artwork"
+msgstr ""
