--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 [B]0.9.20[/B]
 LEIA - Fix for artwork helper on home screen
+LEIA - Add extra download art icon
 Fix screen calibration bug
 
 [B]0.9.19[/B]
