--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 LEIA - Fix for artwork helper on home screen
 LEIA - Add extra download art icon
 Fix screen calibration bug
+Tweak EPG grid
 
 [B]0.9.19[/B]
 LEIA - Add artwork beef artwork helper support in videoinfodialog
