update artwork helper vars

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 [B]0.9.20[/B]
 LEIA - Fix for artwork helper on home screen
 LEIA - Add extra download art icon
+LEIA - Update artwork helper vars (thanks Guilouz!)
 Fix screen calibration bug
 Tweak EPG grid
 
