fix music video info

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]0.9.21[/B]
+Fix musicvideo info
+
 [B]0.9.20[/B]
 LEIA - Fix for artwork helper on home screen
 LEIA - Add extra download art icon
