--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1853,3 +1853,8 @@ msgstr ""
 msgctxt "#31389"
 msgid "Select Artwork"
 msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31390"
+msgid "Pressing up from top menu shows fanart / plot"
+msgstr ""
