--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 [B]0.9.21[/B]
 Fix musicvideo info
 HDR Flag
+Option to disable pressing up from menu
 
 [B]0.9.20[/B]
 LEIA - Fix for artwork helper on home screen
