keyboard improvements thanks loggio

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Fix musicvideo info
 HDR Flag
 Option to disable pressing up from menu
+Keyboard improvements (thanks loggio!)
 
 [B]0.9.20[/B]
 LEIA - Fix for artwork helper on home screen
