--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1858,3 +1858,13 @@ msgstr ""
 msgctxt "#31390"
 msgid "Pressing up from top menu shows fanart / plot"
 msgstr ""
+
+#: /1080i/Includes_Topbar.xml
+msgctxt "#31391"
+msgid "Page"
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31392"
+msgid "Sort Letter"
+msgstr ""
