--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ Widget code changes
 Add sort letter on scrolling
 Add page and item numbers on scrollbar
 Add uninstall icon in addon info
+Fix missing album cover icon
 
 [B]0.9.21[/B]
 Fix musicvideo info
