show media flags instead of ratings

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 [B]0.9.24[/B]
-Fix subtitles download filename length and scroll
+DIALOGSUBTITLES - Fix filename length and scroll
+SKINSETTINGS/LIBRARY - Show media flags instead of ratings
 
 [B]0.9.23[/B]
 Fix musicplaylist
