--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1868,3 +1868,8 @@ msgstr ""
 msgctxt "#31392"
 msgid "Sort Letter"
 msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31393"
+msgid "Show media flags instead of ratings in library views"
+msgstr ""
