subtitles button opens subs menu

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 [B]0.9.24[/B]
 DIALOGSUBTITLES - Fix filename length and scroll
 SKINSETTINGS/LIBRARY - Show media flags instead of ratings
+LEIA - VIDEOOSD - Subtitles button opens subtitles menu
 
 [B]0.9.23[/B]
 Fix musicplaylist
