brazs playlist code

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ LEIA - VIDEOOSD - Subtitles button opens subtitles menu
 DIALOGSUBTITLES - Fix filename length and scroll
 SKINSETTINGS/LIBRARY - Show media flags instead of ratings
 SKINSETTINGS/LIBRARY - Monochrome flags
+PLAYLIST - Add braz's playlist code
 
 [B]0.9.23[/B]
 Fix musicplaylist
