--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1878,3 +1878,13 @@ msgstr ""
 msgctxt "#31394"
 msgid "Monochrome flags"
 msgstr ""
+
+#: /1080i/Includes_Items.xml
+msgctxt "#31395"
+msgid "Music Playlist"
+msgstr ""
+
+#: /1080i/Includes_Items.xml
+msgctxt "#31396"
+msgid "Video Playlist"
+msgstr ""
