--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ DIALOGSUBTITLES - Fix filename length and scroll
 SKINSETTINGS/LIBRARY - Show media flags instead of ratings
 SKINSETTINGS/LIBRARY - Monochrome flags
 PLAYLIST - Add braz's playlist code
+DIALOGADDONINFO - Change Enable/Disable text to Enabled/Disabled to match icons
 
 [B]0.9.23[/B]
 Fix musicplaylist
