--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1888,3 +1888,8 @@ msgstr ""
 msgctxt "#31396"
 msgid "Video Playlist"
 msgstr ""
+
+#: /1080i/Includes_View_Posters.xml
+msgctxt "#31397"
+msgid "Square Wall Large"
+msgstr ""
