submenu focus bump onup

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 VIEWTYPES - Add Square Wall Large
 MYPLAYLIST - Adapt side poster/cover depending on listitem dbtype
 SKINSETTINGS - Move Monochrome flags option to Colors menu
+HOME - Add focus bump when pressing up from submenu and categories widget disabled
 
 [B]0.9.24[/B]
 LEIA - VIDEOOSD - Subtitles button opens subtitles menu
