force extendedinfo opt

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1893,3 +1893,8 @@ msgstr ""
 msgctxt "#31397"
 msgid "Square Wall Large"
 msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31398"
+msgid "Force extendedinfo to open when pressing info"
+msgstr ""
