--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 [B]0.9.26[/B]
 VIEWTYPES - Fix for Big Posters with Codec Info on
 WIDGETS - Fix busy spinner for mouse mode
+VIDEOINFO - Make subtitles and audio language distinction clearer
 
 [B]0.9.25[/B]
 VIEWTYPES - Add Square Wall Large
