some fixes for widgets

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1898,3 +1898,8 @@ msgstr ""
 msgctxt "#31398"
 msgid "Force extendedinfo to open when pressing info"
 msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31399"
+msgid "Text"
+msgstr ""
