--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 [B]0.9.28[/B]
 DIALOGVIDEOINFO - Fix for trailer button (hopefully)
+DIALOGSELECT - Fix for weird multilines
 
 [B]0.9.27[/B]
 SKINSHORTCUTS Fix enable / disable code when in skinshortcuts and adding item
