hopeful fix for pvr info and artwork overlap issues

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 [B]0.9.28[/B]
 DIALOGVIDEOINFO - Fix for trailer button (hopefully)
 DIALOGSELECT - Fix for weird multilines
+PVR - Hopefully fix artwork and info overlap issues
 
 [B]0.9.27[/B]
 SKINSHORTCUTS Fix enable / disable code when in skinshortcuts and adding item
