--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1903,3 +1903,13 @@ msgstr ""
 msgctxt "#31399"
 msgid "Text"
 msgstr ""
+
+#: /1080i/Includes_Items.xml
+msgctxt "#31400"
+msgid "Subtitle settings"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31401"
+msgid "Subtitles button opens subtitle settings"
+msgstr ""
