fix for seekbar pvr

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 SKINSETTINGS - Fix reset to defaults button
 PLOTOVERLAY - Hide clock in plot overlay
 DIALOGVIDEOINFO - Add new trailer window. Thanks to VikkiXavier for the design
+PVROSD - Fix for seekbar in pvr (Thanks Loggio!)
 
 [B]0.9.29[/B]
 DEPENDENCY - Remove Skin Helper as Dependency (Now optional install)
