--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 [B]0.9.30[/B]
+PVROSD - Swap ratings for Next... info
 SKINSETTINGS - Fix reset to defaults button
 PLOTOVERLAY - Hide clock in plot overlay
 DIALOGVIDEOINFO - Add new trailer window. Thanks to VikkiXavier for the design
