--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1904,12 +1904,52 @@ msgctxt "#31399"
 msgid "Text"
 msgstr ""
 
-#: /1080i/Includes_Items.xml
+#: /1080i/Custom_1119_EnableInfoLists.xml
 msgctxt "#31400"
+msgid "Movies by Director"
+msgstr ""
+
+#: /1080i/Custom_1119_EnableInfoLists.xml
+msgctxt "#31401"
+msgid "Next Up Episodes"
+msgstr ""
+
+#: /1080i/Custom_1119_EnableInfoLists.xml
+msgctxt "#31402"
+msgid "Similar Movies"
+msgstr ""
+
+#: /1080i/Custom_1119_EnableInfoLists.xml
+msgctxt "#31403"
+msgid "Similar Tv Shows"
+msgstr ""
+
+#: /1080i/Custom_1119_EnableInfoLists.xml
+msgctxt "#31404"
+msgid "Movies from Studio"
+msgstr ""
+
+#: /1080i/Custom_1119_EnableInfoLists.xml
+msgctxt "#31405"
+msgid "Extrafanart"
+msgstr ""
+
+#: /1080i/Custom_1119_EnableInfoLists.xml
+msgctxt "#31406"
+msgid "Extras / Special Features"
+msgstr ""
+
+#: /1080i/Custom_1119_EnableInfoLists.xml
+msgctxt "#31407"
+msgid "Enable / disable info dialog lists"
+msgstr ""
+
+#: /1080i/Includes_Items.xml
+msgctxt "#31408"
 msgid "Subtitle settings"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
-msgctxt "#31401"
+msgctxt "#31409"
 msgid "Subtitles button opens subtitle settings"
 msgstr ""
