--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1953,3 +1953,8 @@ msgstr ""
 msgctxt "#31409"
 msgid "Subtitles button opens subtitle settings"
 msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31410"
+msgid "Show trailers and special features in preview window"
+msgstr ""
