--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]0.9.32[/B]
+ARTWORK - Add generated artwork for missing artist/album artwork.
+
 [B]0.9.31[/B]
 CODECFLAGS - Add support for Atmos and DTS-X flags based on filename
 DIALOGVIDEOINFO - Add tags and set information
