--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+[B]0.9.33[/B]
+Development moves to Leia only
+Fix Kodi Requires version
+Fix Leia Icon
+
 [B]0.9.32[/B]
 ARTWORK - Add generated artwork for missing artist/album artwork.
 
