Disable press up to view fanart by default

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1786,7 +1786,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml /1080i/SkinSettings.xml
 msgctxt "#31376"
-msgid "Display \"See more\" widget item"
+msgid "Show the \"See More\" widget item"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
