--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 [B]0.9.35[/B]
 Work on Kodi Games section begins
 Add MyGames.xml
+Update DialogGameControllers.xml
+Add GameOSD.xml
 
 [B]0.9.34[/B]
 Test out moveup/down scroll around for EPG
