game filter dialogs

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Work on Kodi Games section begins
 Add MyGames.xml
 Update DialogGameControllers.xml
 Add GameOSD.xml
+Add GameFilter dialogs
 
 [B]0.9.34[/B]
 Test out moveup/down scroll around for EPG
