--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1958,3 +1958,8 @@ msgstr ""
 msgctxt "#31410"
 msgid "Show trailers and special features in preview window"
 msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31411"
+msgid "More"
+msgstr ""
