--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1963,3 +1963,8 @@ msgstr ""
 msgctxt "#31411"
 msgid "More"
 msgstr ""
+
+#: /1080i/DialogPVRChannelManager.xml
+msgctxt "#31412"
+msgid "Apply"
+msgstr ""
