--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1968,3 +1968,8 @@ msgstr ""
 msgctxt "#31412"
 msgid "Apply"
 msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31413"
+msgid "Press UP for more options"
+msgstr ""
