--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1973,3 +1973,8 @@ msgstr ""
 msgctxt "#31413"
 msgid "Press UP for more options"
 msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31414"
+msgid "Explore"
+msgstr ""
