--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1978,3 +1978,23 @@ msgstr ""
 msgctxt "#31414"
 msgid "Explore"
 msgstr ""
+
+#: /1080i/Includes_View_51_Wall.xml
+msgctxt "#31415"
+msgid "Icon"
+msgstr ""
+
+#: /1080i/Includes_View_51_Wall.xml
+msgctxt "#31416"
+msgid "Wall"
+msgstr ""
+
+#: /1080i/Includes_View_52_Showcase.xml
+msgctxt "#31417"
+msgid "Showcase 2"
+msgstr ""
+
+#: /1080i/Custom_1131_Decade_Hub.xml
+msgctxt "#31418"
+msgid "item(s)"
+msgstr ""
