--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1998,3 +1998,13 @@ msgstr ""
 msgctxt "#31418"
 msgid "item(s)"
 msgstr ""
+
+#: /1080i/Includes_View_50_List.xml
+msgctxt "#31419"
+msgid "Finishes"
+msgstr ""
+
+#: /1080i/Includes_View_52_Showcase.xml
+msgctxt "#31420"
+msgid "Ends"
+msgstr ""
