--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -2008,3 +2008,8 @@ msgstr ""
 msgctxt "#31420"
 msgid "Ends"
 msgstr ""
+
+#: /1080i/Includes_View_50_List.xml
+msgctxt "#31421"
+msgid "Banner List"
+msgstr ""
