--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1266,7 +1266,7 @@ msgid "Fallback widget"
 msgstr ""
 
 msgctxt "#31270"
-msgid "Video / Music OSD"
+msgid "Video / Music"
 msgstr ""
 
 msgctxt "#31271"
@@ -2012,4 +2012,9 @@ msgstr ""
 #: /1080i/Includes_View_50_List.xml
 msgctxt "#31421"
 msgid "Banner List"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31422"
+msgid "Live TV / PVR"
 msgstr ""
