--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -2058,3 +2058,8 @@ msgstr ""
 msgctxt "#31430"
 msgid "Queued"
 msgstr ""
+
+#: /1080i/Includes_View_51_Wall.xml
+msgctxt "#31431"
+msgid "Landscape Wall Small"
+msgstr ""
