--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -47,7 +47,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31007"
-msgid "Aura style menu"
+msgid "Horizontal menu"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -87,7 +87,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31015"
-msgid "Use extended info"
+msgid "Use script.extendedinfo in video information dialogs"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -185,6 +185,11 @@ msgctxt "#31034"
 msgid "Change backup and restore path"
 msgstr ""
 
+#: /shortcuts/overrides.xml
+msgctxt "#31035"
+msgid "Open Submenu"
+msgstr ""
+
 #: /1080i/Includes_Labels.xml
 msgctxt "#31036"
 msgid "hr"
@@ -193,6 +198,16 @@ msgstr ""
 #: /1080i/DialogSubtitles.xml
 msgctxt "#31037"
 msgid "Download Subtitles"
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31038"
+msgid "Submenu hub widget"
+msgstr ""
+
+#: /1080i/script-skinshortcuts.xml
+msgctxt "#31039"
+msgid "Background widget"
 msgstr ""
 
 #: /1080i/Custom_1117_EnableViews.xml
