--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -215,9 +215,139 @@ msgctxt "#31040"
 msgid "Poster Showcase"
 msgstr ""
 
+#: /1080i/Custom_1138_Search.xml
+msgctxt "#31041"
+msgid "Release Year"
+msgstr ""
+
+#: /1080i/Custom_1138_Search.xml
+msgctxt "#31042"
+msgid "By Actors Named"
+msgstr ""
+
+#: /1080i/Custom_1138_Search.xml
+msgctxt "#31043"
+msgid "By Directors Named"
+msgstr ""
+
+#: /1080i/Custom_1138_Search.xml
+msgctxt "#31044"
+msgid "Albums by"
+msgstr ""
+
+#: /1080i/Custom_1138_Search.xml
+msgctxt "#31045"
+msgid "Results for"
+msgstr ""
+
+#: /1080i/Custom_1131_Decade_Hub.xml
+msgctxt "#31046"
+msgid "Decades"
+msgstr ""
+
+#: /1080i/Custom_1131_Decade_Hub.xml
+msgctxt "#31047"
+msgid "Movie(s)"
+msgstr ""
+
+#: /1080i/Custom_1131_Decade_Hub.xml
+msgctxt "#31048"
+msgid "from the"
+msgstr ""
+
+#: /1080i/Custom_1133_Sets_Hub.xml
+msgctxt "#31049"
+msgid "Collections"
+msgstr ""
+
+#: /1080i/Custom_1136_VideoInfo.xml
+msgctxt "#31050"
+msgid "Searching"
+msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31051"
+msgid "Similar to"
+msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31052"
+msgid "By Director"
+msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31053"
+msgid "Films from"
+msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31054"
+msgid "Next Up"
+msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31055"
+msgid "Cast Members Also Feature In"
+msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31056"
+msgid "Special Features &amp; Extras"
+msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31057"
+msgid "Films in the"
+msgstr ""
+
+#: /1080i/DialogVideoInfo.xml
+msgctxt "#31058"
+msgid "Cast of"
+msgstr ""
+
 #: /1080i/DialogContextMenu.xml
 msgctxt "#31059"
 msgid "Context Menu"
+msgstr ""
+
+#: /1080i/script-script.extendedinfo-DialogInfo.xml
+msgctxt "#31060"
+msgid "Films starring"
+msgstr ""
+
+#: /1080i/script-script.extendedinfo-DialogInfo.xml
+msgctxt "#31061"
+msgid "Tv shows starring"
+msgstr ""
+
+#: /1080i/script-script.extendedinfo-DialogInfo.xml
+msgctxt "#31062"
+msgid "Films with"
+msgstr ""
+
+#: /1080i/script-script.extendedinfo-DialogInfo.xml
+msgctxt "#31063"
+msgid "as Crew"
+msgstr ""
+
+#: /1080i/script-script.extendedinfo-DialogInfo.xml
+msgctxt "#31064"
+msgid "Tv shows with"
+msgstr ""
+
+#: /1080i/script-script.extendedinfo-DialogInfo.xml
+msgctxt "#31065"
+msgid "Images of"
+msgstr ""
+
+#: /1080i/script-script.extendedinfo-DialogVideoInfo.xml
+msgctxt "#31066"
+msgid "Crew of"
+msgstr ""
+
+#: /1080i/script-script.extendedinfo-DialogVideoInfo.xml
+msgctxt "#31067"
+msgid "Trailers"
 msgstr ""
 
 #: /1080i/Includes_Weather.xml
@@ -225,14 +355,94 @@ msgctxt "#31068"
 msgid "Cloud cover"
 msgstr ""
 
+#: /1080i/Includes_Labels.xml
+msgctxt "#31069"
+msgid "Management"
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31070"
+msgid "This category contains settings to customise home screen shortcuts$COMMA widgets and layout."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31071"
+msgid "This category contains settings to customise what images are displayed in the background."
+msgstr ""
+
 #: /1080i/DialogButtonMenu.xml
 msgctxt "#31072"
 msgid "Power Menu"
 msgstr ""
 
+#: /1080i/Includes_Labels.xml
+msgctxt "#31073"
+msgid "This category contains settings to customise the highlight and selection-box colors used in the skin."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31074"
+msgid "This category contains settings to customise what is displayed in information dialogs and library views."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31075"
+msgid "This category contains settings to customise what is displayed when playing music or video fullscreen."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31076"
+msgid "This category contains settings to customise what is displayed in the PVR."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31077"
+msgid "This category contains settings that do not fit other categories."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31078"
+msgid "This category allows you to view$COMMA install and customise add-ons supported by Arctic Zephyr 2."
+msgstr ""
+
 #: /1080i/SkinSettings.xml
 msgctxt "#31079"
 msgid "Pause video when opening info"
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31080"
+msgid "This category contains options for backing-up$COMMA restoring and reseting Arctic Zephyr 2 skin settings."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31081"
+msgid "This section contains skin settings for Arctic Zephyr 2."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31082"
+msgid "This section contains information about your system."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31083"
+msgid "This section contains system settings."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31084"
+msgid "This section contains Live TV and PVR settings."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31085"
+msgid "This section contains login-screen and profile settings."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31086"
+msgid "This section contains service settings."
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -243,6 +453,21 @@ msgstr ""
 #: /1080i/SkinSettings.xml
 msgctxt "#31088"
 msgid "Scrolling text effect"
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31089"
+msgid "This section contains interface and regional settings."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31090"
+msgid "This section contains media and library settings."
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31091"
+msgid "This section contains playback settings."
 msgstr ""
 
 msgctxt "#31101"
