--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -470,6 +470,11 @@ msgctxt "#31091"
 msgid "This section contains playback settings."
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31092"
+msgid "Use Roboto fontset for plot boxes"
+msgstr ""
+
 msgctxt "#31101"
 msgid "items"
 msgstr ""
