--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -475,6 +475,16 @@ msgctxt "#31092"
 msgid "Use Roboto fontset for plot boxes"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31093"
+msgid "Slim PVR Guide"
+msgstr ""
+
+#: /1080i/SkinSettings.xml
+msgctxt "#31094"
+msgid "Apply colordiffuse on icons"
+msgstr ""
+
 msgctxt "#31101"
 msgid "items"
 msgstr ""
