--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -57,7 +57,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31009"
-msgid "Press down to access to submenu hub"
+msgid "Press DOWN to access submenu hub"
 msgstr ""
 
 #: /1080i/script-skinshortcuts.xml
@@ -483,6 +483,16 @@ msgstr ""
 #: /1080i/SkinSettings.xml
 msgctxt "#31094"
 msgid "Apply colordiffuse on icons"
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31095"
+msgid "Press LEFT to access submenu hub"
+msgstr ""
+
+#: /1080i/Includes_Labels.xml
+msgctxt "#31096"
+msgid "Press UP to access submenu hub"
 msgstr ""
 
 msgctxt "#31101"
