fix startup playlist

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.3
+Fix for startup playlist
+
 0.9.2
 Single widgets in multiwidget now show info when unfocused
 Multi widgets show fanart when unfocused
