fix menu item jump

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 0.9.5
 Fix for submenu widgets on v1.0.17 of skinshortcuts
+Fix for menu items positioning
 
 0.9.4
 Fix for square list where content is files and window is not MyVideoNav
