--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.10
+Rewrite widget code for better handling
+
 0.9.9
 Fix for programs menu
 Scrolling for horizontal menu (no limit on number of items)
