--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -539,6 +539,11 @@ msgctxt "#31106"
 msgid "Ends "
 msgstr ""
 
+#: /1080i/script-skinshortcuts.xml
+msgctxt "#31107"
+msgid "Item limit"
+msgstr ""
+
 msgctxt "#31109"
 msgid "Customise home menu"
 msgstr ""
