submenu multi horizontal

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.9.12
+Change overrides for custom node hubs to default items (to allow setting normal library paths)
+Prevent pressing left if no submenu on vertical home.
+
 0.9.11
 Add widget sort methods
 Revert horizontal menu to Aura style spacing
