fix for widgets retaining position on back

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,8 @@
 Change overrides for custom node hubs to default items (to allow setting normal library paths)
 Prevent pressing left if no submenu on vertical home.
 Minimal busy loader option
+Submenu on multi horizontal home
+Fix for widgets retaining position onback
 
 0.9.11
 Add widget sort methods
