--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -565,6 +565,11 @@ msgctxt "#31112"
 msgid "Submenu"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31113"
+msgid "Global widget"
+msgstr ""
+
 msgctxt "#31114"
 msgid "Now Playing"
 msgstr ""
