--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -132,7 +132,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31024"
-msgid "Miscellaneous"
+msgid "Furniture"
 msgstr ""
 
 #: /1080i/SkinSettings.xml
@@ -546,7 +546,7 @@ msgstr ""
 
 #: /1080i/SkinSettings.xml
 msgctxt "#31108"
-msgid "Minimal busy loader"
+msgid "Display minimal busy loader"
 msgstr ""
 
 msgctxt "#31109"
