fix notification dialog

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+0.9.14
+Fix notification dialog
+
+0.9.13
+Fixes
+
 0.9.12
 Change overrides for custom node hubs to default items (to allow setting normal library paths)
 Prevent pressing left if no submenu on vertical home.
