update viewtype names

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,7 @@
 Fix notification dialog
 Fix minimal busy loader overlapping now playing when starting a movie
 Fix minimal busy loader overlapping notifications and extendedprogressbar
-Add press down from horizontal home menu 
+Add press down from simple home submenu to open submenu hub
 
 0.9.13
 Fixes
