--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+0.9.16
+Fix for YouTube lists (and other addon lists) to only show when addon is installed
+Update busy spinner in local library info search
+Fix 1136 local library info search fanart jumpiness
+
 0.9.15
 Fix clearlogo to show in appropriate sections
 Fix for widgetcontainer not clearing
