--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,9 @@
 Fix for YouTube lists (and other addon lists) to only show when addon is installed
 Update busy spinner in local library info search
 Fix 1136 local library info search fanart jumpiness
+Some other fixes for local library info search
+Disable library info search for tvshows/episodes
+Fix for showcase slide over with parentfolder items
 
 0.9.15
 Fix clearlogo to show in appropriate sections
